@@ -1,3 +1,8 @@
+2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b34
+
+ * Fix: Name and email of recepient was not
+        correct initialized in ecard popup.
+
 2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b33
 
  * Change: Changed all '    ' (4 spaces) to 1 tab.
